--- a/.github/workflows/rag-check.yml
+++ b/.github/workflows/rag-check.yml
@@ -1,39 +1,45 @@
 name: rag-check
-on: [pull_request]
+on: [push, pull_request]
+
 jobs:
-  smoke:
+  rag-check:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - name: Install deps + package
+      - name: Install deps + package (creates `arx` console script)
         run: |
           python -m pip install -U pip setuptools wheel
           python -m pip install -r requirements.txt
-          # install your repo so the "arx" console script is created
           python -m pip install -e .
 
-      - name: Sanity check
+      - name: Sanity check CLI
         run: |
           which arx
           arx --help
+          python - <<'PY'
+import importlib; m=importlib.import_module("cli.main")
+print("cli.main ok:", hasattr(m,"main"))
+PY
 
-      - name: Index
+      - name: RAG index (uses your CLI)
         env:
           AR_ENABLE_RAG: "1"
           AR_EMBED_MODEL: "BAAI/bge-m3"
         run: |
           arx memory index --src=. --namespaces=coder --reindex
+          # Fallback if entrypoint fails:
+          # PYTHONPATH=. python -m cli.main memory index --src=. --namespaces=coder --reindex
 
-      - name: Query
+      - name: RAG query
         env:
           AR_ENABLE_RAG: "1"
           AR_EMBED_MODEL: "BAAI/bge-m3"
         run: |
           arx memory query --persona=CODER_AI --query "flow_runner" --k=3
+          # Fallback if entrypoint fails:
+          # PYTHONPATH=. python -m cli.main memory query --persona=CODER_AI --query "flow_runner" --k=3
