🔧 Fix TOML parsing errors in pyproject.toml
- Fix unescaped backslashes in regex patterns
- Escape all backslashes in coverage exclude_lines
- Fix Black tool configuration backslashes
- Validate TOML syntax with tomli parser
- Resolves CI/CD TOML parsing failures

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -140,16 +140,16 @@ exclude = ["tests*", "docs*", "scripts*", "tools*"]
 [tool.black]
 line-length = 88
 target-version = ['py38', 'py39', 'py310', 'py311']
-include = '\.pyi?$'
+include = '\\.pyi?$'
 extend-exclude = '''
 /(
   # directories
-  \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
+  \\.eggs
+  | \\.git
+  | \\.hg
+  | \\.mypy_cache
+  | \\.tox
+  | \\.venv
   | build
   | dist
 )/
@@ -231,6 +231,6 @@ exclude_lines = [
     "raise NotImplementedError",
     "if 0:",
     "if __name__ == .__main__.:",
-    "class .*\bProtocol\):",
-    "@(abc\.)?abstractmethod",
+    "class .*\\bProtocol\\):",
+    "@(abc\\.)?abstractmethod",
 ]
